[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/spawners/SeagullSpawner_edges.gd" type="Script" id=1]

[node name="SeagullSpawner_edges" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Ground" type="Position2D" parent="."]

[node name="LeftEdge" type="Position2D" parent="."]
position = Vector2( -500, 0 )

[node name="RightEdge" type="Position2D" parent="."]
position = Vector2( -500, 0 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
